[gd_scene load_steps=3 format=3 uid="uid://df4aw08xqlsc5"]

[ext_resource type="Script" path="res://scripts/redemption_dialog.gd" id="1_redemption"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.08, 0.08, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.42, 0.42, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0

[node name="RedemptionDialog" type="CanvasLayer"]
layer = 100
visible = false
script = ExtResource("1_redemption")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0, 0, 0.75)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -220.0
offset_right = 320.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarshalNameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.42, 0.42, 1)
theme_override_font_sizes/font_size = 22
text = "MARSHAL REQUESTS AUDIENCE"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.933, 0.933, 0.933, 1)
theme_override_font_sizes/font_size = 15
text = "\"Sire, our relationship has broken down completely. I cannot continue to serve under these conditions...\""
autowrap_mode = 3
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TrustLabel" type="Label" parent="PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.42, 0.42, 1)
theme_override_font_sizes/font_size = 14
text = "Trust: 15 (Critical)"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionsLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.627, 0.627, 0.659, 1)
theme_override_font_sizes/font_size = 13
text = "How will you handle this crisis?"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AutonomyButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.5, 1)
theme_override_colors/font_pressed_color = Color(0.6, 0.9, 0.6, 1)
theme_override_colors/font_hover_color = Color(0.6, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "Grant Autonomy (3 turns) - Marshal acts independently, returns restored"

[node name="DismissButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.42, 0.42, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.5, 0.5, 1)
theme_override_colors/font_hover_color = Color(0.9, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 13
text = "Dismiss Marshal - Relieve of command, troops transfer"

[node name="DemandButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.851, 0.753, 0.549, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.8, 0.6, 1)
theme_override_colors/font_hover_color = Color(0.9, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "Demand Obedience - Force compliance, high disobey chance"
